--- a/Chronicles of Divinity/.gitignore
+++ b/Chronicles of Divinity/.gitignore
@@ -12,3 +12,4 @@ Mods/DivinityChronicles_23154358-f7a9-4c9e-bd0d-8fd859ddb55e/Story/RawFiles/stor
 
 #Assets
 Public/DivinityChronicles_23154358-f7a9-4c9e-bd0d-8fd859ddb55e/Assets/*
+Mods/DivinityChronicles_23154358-f7a9-4c9e-bd0d-8fd859ddb55e/Levels/*/WorldMap/Minimap.dds
